bindings/c/include/cgenalyzer.h


typedef enum GnCodeFormat {
	GnCodeFormatOffsetBinary, 
	GnCodeFormatTwosComplement 
} GnCodeFormat;
typedef enum GnFreqAxisFormat {
	GnFreqAxisFormatBins, 
	GnFreqAxisFormatFreq, 
	GnFreqAxisFormatNorm 
} GnFreqAxisFormat;
typedef enum GnFreqAxisType {
	GnFreqAxisTypeDcCenter, 
	GnFreqAxisTypeDcLeft, 
	GnFreqAxisTypeReal 
} GnFreqAxisType;
typedef enum GnRfftScale {
	GnRfftScaleDbfsDc, 
	GnRfftScaleDbfsSin, 
	GnRfftScaleNative 
} GnRfftScale;
typedef enum GnWindow {
	GnWindowBlackmanHarris, 
	GnWindowHann, 
	GnWindowNoWindow 
} GnWindow;
__api int gn_fft(double *out, 
		size_t out_size, 
		const double *i, 
		size_t i_size, 
		const double *q, 
		size_t q_size, 
		size_t navg, 
		size_t nfft, 
		GnWindow window 
);
__api int
gn_fft16(double *out, 
		size_t out_size, 
		const int16_t *i, 
		size_t i_size, 
		const int16_t *q, 
		size_t q_size, 
		int n, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnCodeFormat format 
);
__api int
gn_fft32(double *out, 
		size_t out_size, 
		const int32_t *i, 
		size_t i_size, 
		const int32_t *q, 
		size_t q_size, 
		int n, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnCodeFormat format 
);
__api int
gn_fft64(double *out, 
		size_t out_size, 
		const int64_t *i, 
		size_t i_size, 
		const int64_t *q, 
		size_t q_size, 
		int n, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnCodeFormat format 
);
__api int gn_rfft(double *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnRfftScale scale 
);
__api int
gn_rfft16(double *out, 
		size_t out_size, 
		const int16_t *in, 
		size_t in_size, 
		int n, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnCodeFormat format, 
		GnRfftScale scale 
);
__api int
gn_rfft32(double *out, 
		size_t out_size, 
		const int32_t *in, 
		size_t in_size, 
		int n, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnCodeFormat format, 
		GnRfftScale scale 
);
__api int
gn_rfft64(double *out, 
		size_t out_size, 
		const int64_t *in, 
		size_t in_size, 
		int n, 
		size_t navg, 
		size_t nfft, 
		GnWindow window, 
		GnCodeFormat format, 
		GnRfftScale scale 
);
__api int gn_fft_size(size_t *out_size, 
		size_t i_size, 
		size_t q_size, 
		size_t navg, 
		size_t nfft 
);
__api int gn_rfft_size(size_t *out_size, 
		size_t in_size, 
		size_t navg, 
		size_t nfft 
);
__api int gn_alias(double *out, 
		double fs, 
		double freq, 
		GnFreqAxisType axis_type 
);
__api int gn_coherent(double *out, 
		size_t nfft, 
		double fs, 
		double freq 
);
__api int gn_fftshift(double *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size 
);
__api int
gn_freq_axis(double *out, 
		size_t size, 
		size_t nfft, 
		GnFreqAxisType axis_type, 
		double fs, 
		GnFreqAxisFormat axis_format 
);
__api int gn_ifftshift(double *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size 
);
__api int
gn_freq_axis_size(size_t *size, 
		size_t nfft, 
		GnFreqAxisType axis_type 
);
__api int gn_mgr_clear();
__api int gn_mgr_compare(
		bool *result, 
		const char *obj_key1, 
		const char *obj_key2 
);
__api int gn_mgr_contains(
		bool *result, 
		const char *obj_key 
);
__api int gn_mgr_remove(const char *obj_key 
);
__api int gn_mgr_save(char *buf, 
		size_t size, 
		const char *obj_key, 
		const char *filename 
);
__api int
gn_mgr_size(size_t *size 
);
__api int gn_mgr_to_string(char *buf, 
		size_t size, 
		const char *obj_key 
);
__api int gn_mgr_type(char *buf, 
		size_t size, 
		const char *obj_key 
);
__api int gn_mgr_save_filename_size(
		size_t *size, 
		const char *obj_key, 
		const char *filename 
);
__api int gn_mgr_to_string_size(
		size_t *size, 
		const char *obj_key 
);
__api int gn_mgr_type_size(
		size_t *size, 
		const char *obj_key 
);
__api int
gn_downsample(double *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size, 
		int ratio, 
		bool interleaved 
);
__api int
gn_downsample16(int16_t *out, 
		size_t out_size, 
		const int16_t *in, 
		size_t in_size, 
		int ratio, 
		bool interleaved 
);
__api int
gn_downsample32(int32_t *out, 
		size_t out_size, 
		const int32_t *in, 
		size_t in_size, 
		int ratio, 
		bool interleaved 
);
__api int
gn_downsample64(int64_t *out, 
		size_t out_size, 
		const int64_t *in, 
		size_t in_size, 
		int ratio, 
		bool interleaved 
);
__api int gn_fshift(double *out, 
		size_t out_size, 
		const double *i, 
		size_t i_size, 
		const double *q, 
		size_t q_size, 
		double fs, 
		double fshift 
);
__api int gn_fshift16(int16_t *out, 
		size_t out_size, 
		const int16_t *i, 
		size_t i_size, 
		const int16_t *q, 
		size_t q_size, 
		int n, 
		double fs, 
		double fshift, 
		GnCodeFormat format 
);
__api int gn_fshift32(int32_t *out, 
		size_t out_size, 
		const int32_t *i, 
		size_t i_size, 
		const int32_t *q, 
		size_t q_size, 
		int n, 
		double fs, 
		double fshift, 
		GnCodeFormat format 
);
__api int gn_fshift64(int64_t *out, 
		size_t out_size, 
		const int64_t *i, 
		size_t i_size, 
		const int64_t *q, 
		size_t q_size, 
		int n, 
		double fs, 
		double fshift, 
		GnCodeFormat format 
);
__api int gn_normalize16(double *out, 
		size_t out_size, 
		const int16_t *in, 
		size_t in_size, 
		int n, 
		GnCodeFormat format 
);
__api int gn_normalize32(double *out, 
		size_t out_size, 
		const int32_t *in, 
		size_t in_size, 
		int n, 
		GnCodeFormat format 
);
__api int gn_normalize64(double *out, 
		size_t out_size, 
		const int64_t *in, 
		size_t in_size, 
		int n, 
		GnCodeFormat format 
);
__api int gn_polyval(double *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size, 
		const double *c, 
		size_t c_size 
);
__api int gn_quantize16(int16_t *out, 
		size_t out_size, 
		const double *in, 
		size_t in_size, 
		double fsr, 
		int n, 
		double noise, 
		GnCodeFormat format 
);
__api int gn_downsample_size(
		size_t *out_size, 
		size_t in_size, 
		int ratio, 
		bool interleaved 
);
__api int gn_fshift_size(size_t *out_size, 
		size_t i_size, 
		size_t q_size 
);