bindings/csharp/Genalyzer/NativeMethods.cs


        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] i,      UIntPtr iSize,
            [In]  double[] q,      UIntPtr qSize,
            UIntPtr navg, UIntPtr nfft, int window);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft16(
            [Out] double[] output, UIntPtr outSize,
            [In]  short[]  i,      UIntPtr iSize,
            [In]  short[]  q,      UIntPtr qSize,
            int n, UIntPtr navg, UIntPtr nfft, int window, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft32(
            [Out] double[] output, UIntPtr outSize,
            [In]  int[]    i,      UIntPtr iSize,
            [In]  int[]    q,      UIntPtr qSize,
            int n, UIntPtr navg, UIntPtr nfft, int window, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft64(
            [Out] double[] output, UIntPtr outSize,
            [In]  long[]   i,      UIntPtr iSize,
            [In]  long[]   q,      UIntPtr qSize,
            int n, UIntPtr navg, UIntPtr nfft, int window, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fft_size(
            out UIntPtr outSize,
            UIntPtr iSize, UIntPtr qSize,
            UIntPtr navg, UIntPtr nfft);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_rfft(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize,
            UIntPtr navg, UIntPtr nfft, int window, int scale);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_rfft16(
            [Out] double[] output, UIntPtr outSize,
            [In]  short[]  input,  UIntPtr inSize,
            int n, UIntPtr navg, UIntPtr nfft, int window, int format, int scale);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_rfft32(
            [Out] double[] output, UIntPtr outSize,
            [In]  int[]    input,  UIntPtr inSize,
            int n, UIntPtr navg, UIntPtr nfft, int window, int format, int scale);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_rfft64(
            [Out] double[] output, UIntPtr outSize,
            [In]  long[]   input,  UIntPtr inSize,
            int n, UIntPtr navg, UIntPtr nfft, int window, int format, int scale);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_rfft_size(
            out UIntPtr outSize,
            UIntPtr inSize, UIntPtr navg, UIntPtr nfft);

        // ===============================================================
        // Fourier Utilities
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_alias(
            out double output,
            double fs, double freq, int axisType);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_coherent(
            out double output,
            UIntPtr nfft, double fs, double freq);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fftshift(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_freq_axis(
            [Out] double[] output, UIntPtr size,
            UIntPtr nfft, int axisType,
            double fs, int axisFormat);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_freq_axis_size(
            out UIntPtr size,
            UIntPtr nfft, int axisType);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_ifftshift(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize);

        // ===============================================================
        // Manager
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_clear();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_compare(
            [MarshalAs(UnmanagedType.I1)] out bool result,
            [MarshalAs(UnmanagedType.LPStr)] string objKey1,
            [MarshalAs(UnmanagedType.LPStr)] string objKey2);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_contains(
            [MarshalAs(UnmanagedType.I1)] out bool result,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_remove(
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_save(
            [Out] byte[] buf, UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string filename);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_save_filename_size(
            out UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string objKey,
            [MarshalAs(UnmanagedType.LPStr)] string filename);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_size(
            out UIntPtr size);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_to_string(
            [Out] byte[] buf, UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_to_string_size(
            out UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_type(
            [Out] byte[] buf, UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_mgr_type_size(
            out UIntPtr size,
            [MarshalAs(UnmanagedType.LPStr)] string objKey);

        // ===============================================================
        // Signal Processing
        // ===============================================================

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_downsample(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize,
            int ratio,
            [MarshalAs(UnmanagedType.I1)] bool interleaved);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_downsample16(
            [Out] short[]  output, UIntPtr outSize,
            [In]  short[]  input,  UIntPtr inSize,
            int ratio,
            [MarshalAs(UnmanagedType.I1)] bool interleaved);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_downsample32(
            [Out] int[]    output, UIntPtr outSize,
            [In]  int[]    input,  UIntPtr inSize,
            int ratio,
            [MarshalAs(UnmanagedType.I1)] bool interleaved);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_downsample64(
            [Out] long[]   output, UIntPtr outSize,
            [In]  long[]   input,  UIntPtr inSize,
            int ratio,
            [MarshalAs(UnmanagedType.I1)] bool interleaved);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_downsample_size(
            out UIntPtr outSize,
            UIntPtr inSize, int ratio,
            [MarshalAs(UnmanagedType.I1)] bool interleaved);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fshift(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] i,      UIntPtr iSize,
            [In]  double[] q,      UIntPtr qSize,
            double fs, double fshift);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fshift16(
            [Out] short[]  output, UIntPtr outSize,
            [In]  short[]  i,      UIntPtr iSize,
            [In]  short[]  q,      UIntPtr qSize,
            int n, double fs, double fshift, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fshift32(
            [Out] int[]    output, UIntPtr outSize,
            [In]  int[]    i,      UIntPtr iSize,
            [In]  int[]    q,      UIntPtr qSize,
            int n, double fs, double fshift, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fshift64(
            [Out] long[]   output, UIntPtr outSize,
            [In]  long[]   i,      UIntPtr iSize,
            [In]  long[]   q,      UIntPtr qSize,
            int n, double fs, double fshift, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_fshift_size(
            out UIntPtr outSize,
            UIntPtr iSize, UIntPtr qSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_normalize16(
            [Out] double[] output, UIntPtr outSize,
            [In]  short[]  input,  UIntPtr inSize,
            int n, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_normalize32(
            [Out] double[] output, UIntPtr outSize,
            [In]  int[]    input,  UIntPtr inSize,
            int n, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_normalize64(
            [Out] double[] output, UIntPtr outSize,
            [In]  long[]   input,  UIntPtr inSize,
            int n, int format);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_polyval(
            [Out] double[] output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize,
            [In]  double[] c,      UIntPtr cSize);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        internal static extern int gn_quantize16(
            [Out] short[]  output, UIntPtr outSize,
            [In]  double[] input,  UIntPtr inSize,
            double fsr, int n, double noise, int format);
